# llm_bot

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  TelegramBot_Specification.docx  TelegramBot_Specification.md  main.py  pyproject.toml
auth_service/: .env  .env.example  README.md  auth.db  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/: deps.py  router.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  security.py
auth_service/app/db/: models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: auth.py  user.py
auth_service/app/usecases/: auth.py
auth_service/tests/: test_auth_api.py  test_security.py
bot_service/: .env  .env.example  README.md  pyproject.toml  run_bot.py
bot_service/app/: main.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: llm_tasks.py
bot_service/tests/: conftest.py  test_handlers.py  test_jwt.py  test_openrouter_client.py
docker/: docker-compose.remote.yml
